# privacy-broker-ops

./: .gitignore  AGENT.md  README.md  TODO.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
data/: brokers.yaml  person.example.yaml
docs/: ARCHITECTURE.md
docs/codex-prompts/: 01-agent-rules.md  01-workflow-rules.md  02-local-private-storage.md  03-mail-events.md  04-reminder-agent.md  04-reminder-workflow.md  05-dashboard.md  06-docs-and-final-check.md  README-CODEX-PROMPTS.md
scripts/: run-checks.sh
src/privacy_broker_ops/: __init__.py  agent.py  brokers.py  cli.py  config.py  dashboard.py  followup.py  mail.py  models.py  person.py  render.py  repository.py
src/privacy_broker_ops/templates/: cnil_prepare_fr.txt.j2  reminder_formal_fr.txt.j2  reminder_fr.txt.j2  reminder_soft_fr.txt.j2  request_fr.txt.j2
tests/: test_agent.py  test_config.py  test_dashboard.py  test_mail.py  test_reminders.py  test_render.py
